--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.application.name=heroticketing
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
 logging.level.org.springframework.data.redis=DEBUG
+spring.h2.console.enabled=true
