--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.data.redis.host=localhost
 spring.data.redis.port=6379
 logging.level.org.springframework.data.redis=DEBUG
 spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto=update
